@@ -29,5 +29,26 @@ A: Yes.
 
 Q: I get "zlib error" entries in my error log.
 A: Some b0rked servers are sending Content-Type: gzip for pages
-   that are not compressed. In this case WebCleaner does not try to
-   decompress the content but prints the above error.
+   that are not compressed. In this case WebCleaner switches to
+   non-compressing filtering and prints the above error.
+
+Q: I am paranoid. What should I do besides running WebCleaner?
+A: The default config of WebCleaner is strict when it comes
+   to passing private information. Here are some more tips for
+   browser settings:
+   - Use Mozillas JavaScript Popup filtering. See
+     Mozilla -> Edit -> Preferences -> Advanced -> Scripts & Plugins
+   - Disable Java. See
+     Mozilla -> Edit -> Preferences -> Advanced
+   - Dont send your real email address to FTP servers. See
+     Mozilla -> Edit -> Preferences -> Advanced
+   - Dont accept cookies, or at least set the browser to warn you
+     of every attempt to store cookies. See
+     Mozilla -> Edit -> Preferences -> Privacy & Security -> Cookies
+   - Disable image animation. See
+     Mozilla -> Edit -> Preferences -> Privacy & Security -> Images
+   - Dont save form data. See
+     Mozilla -> Edit -> Preferences -> Privacy & Security -> Forms
+   - Dont save passwords. See
+     Mozilla -> Edit -> Preferences -> Privacy & Security -> Passwords
+   - Dont install the Flash Plugin.
