@@ -8,6 +8,7 @@
     Changed files: README.sshtunnel
   * fixed reloading on SIGHUP
     Changed files: wc/__init__.py
+  * Updated README and FAQ
 
 0.60
   * Dont filter comments in *.oreillynet.com - they have some funky
